[package]
  name = "chirpstack-packet-multiplexer"
  description = "ChirpStack Packet Multiplexer"
  repository = "https://github.com/chirpstack/chirpstack-package-multiplexer/"
  homepage = "https://github.com/chirpstack/chirpstack-package-multiplexer/"
  license = "MIT"
  version = "4.0.0-test.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false

[dependencies]
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  serde = { version = "1.0", features = ["derive"] }
  toml = "0.8"
  prometheus-client = "0.22"
  tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
  ] }
  anyhow = "1.0"
  lrwn_filters = { version = "4.10.0-test.1", features = ["serde"] }
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
  signal-hook = "0.3"
  hex = "0.4"
  axum = "0.7"
  handlebars = "6.1"

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-packet-multiplexer",
        "usr/bin/",
        "755",
      ],
      [
        "packaging/debian/chirpstack-packet-multiplexer.toml",
        "etc/chirpstack-packet-multiplexer/",
        "640",
      ],
    ]
    conf-files = [
      "/etc/chirpstack-packet-multiplexer/chirpstack-packet-multiplexer.toml",
    ]
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }
